--- a/templates/new.html
+++ b/templates/new.html
@@ -1,86 +1,44 @@
 {% extends "base.html" %}
-{%block head%}
-<link href="/static/css/filepond.css" rel="stylesheet">
-<link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
-</link>
-<link rel="stylesheet" href="/static/css/ayu-mirage.css">
+{% block head %}
+    <link href="/static/css/filepond.css" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
+    </link>
+    <link rel="stylesheet" href="/static/css/ayu-mirage.css">
 
-<script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.js">
-</script>
-<script type="text/javascript"
-  src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/mode/markdown/markdown.min.js">
-</script>
-<style>
-.CodeMirror {
-  border: 1px solid #eee;
-  height: auto;
-}
-</style>
-{%endblock%}
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.js">
+    </script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/mode/markdown/markdown.min.js">
+    </script>
+    <style>
+        .CodeMirror {
+            border: 1px solid #eee;
+            height: auto;
+        }
+    </style>
+{% endblock %}
 {% block content %}
     <form method="post">
         <div class="form-group">
             <label for="name">Page name</label>
-            <input type="text" class="form-control" id="name" name="PN" value="{{title}}">
+            <input type="text" class="form-control" id="name" name="PN" value="{{ title }}">
         </div>
         <div class="form-group">
             <label for="content">Content</label>
-            <textarea style="display: none;" class="form-control" id="content" rows="25" name="CT">{{content}}</textarea>
+            <textarea style="display: none;" class="form-control" id="content" rows="25"
+                      name="CT">{{ content }}</textarea>
         </div>
         <input type="file" multiple>
         <p id="message"></p>
         <button type="submit" class="btn btn-primary mb-2">Save</button>
 
     </form>
-    <script src="/static/js/filepond.js"></script>
+    <script type="text/javascript" src="/static/js/new.js"></script>
     <script>
-        function copy_fun(mes){
-             var tempInput = document.createElement("input");
-            tempInput.style = "position: absolute; left: -1000px; top: -1000px";
-            tempInput.value = mes;
-            document.body.appendChild(tempInput);
-            tempInput.select();
-            document.execCommand("copy");
-            document.body.removeChild(tempInput);
-
-                }
-        let filename = "";
-        let messages = [];
-        const inputElement = document.querySelector('input[type="file"]');
-        const pond = FilePond.create( inputElement  );
-        FilePond.setOptions({
-                server:{
-                    url:'/',
-                    process:{
-                        url: './{{upload_path}}',
-                        onload: (response) => {
-                                    let filename=response;
-                                    messages.push(filename);
-                                    let mes = "";
-                                    for (i in messages){
-                                        md = "![caption](/{{upload_path}}/" + messages[i] + ")";
-                                        m = "<li>Use <b>"+md+"</b> inside your markdown file <a id='myLink' href='#' onclick=\"copy_fun('"+md+"')\">Copy</a> </li>";
-                                        mes = mes +m
-                                    }
-                                    document.getElementById("message").innerHTML=mes;
-                                }
-                                                        
-                            }
-                        },
-                });
-    </script>
-    <script>
-        var editor = CodeMirror.fromTextArea(document.getElementById("content"), {
-            mode: 'markdown',
-            lineNumbers: true,
-            theme: "default",
-            extraKeys: {"Enter": "newlineAndIndentContinueMarkdownList"}
-        });
-
         {% if system.darktheme == True%}
-            editor.setOption("theme","ayu-mirage");
+            editor.setOption("theme", "ayu-mirage");
         {% endif %}
     </script>
 {% endblock %}
